03/02 ngan main cu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,7 +129,7 @@
             <div class="card-body">
               <ul class="list-group">
                 <li class="list-group-item"><a [routerLink]="'student/subscribe/1'"><i class="fa fa-font"></i>Đăng ký đề tài</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Thông báo</a>
+                <li class="list-group-item"><a [routerLink]="['/news']"><i class="fa fa-bell"></i> Thông báo</a>
                 </li>
                 <li class="list-group-item"><a href="#" [routerLink]="['/student/student-list']"><i class="fa fa-users" aria-hidden="true"></i>
                   Danh sách sinh viên
