--- a/src/app/student/student-delete/student-delete.component.html
+++ b/src/app/student/student-delete/student-delete.component.html
@@ -20,23 +20,23 @@
     </div>
   </div>
 
-  <div class="form-row">
-    <div class="form-group col-md-5">
-      <label>Tên đề tài:</label>
-    </div>
-    <div class="form-group col-md-7">
-      <label>{{topic}}</label>
-    </div>
-  </div>
+<!--  <div class="form-row">-->
+<!--    <div class="form-group col-md-5">-->
+<!--      <label>Tên đề tài:</label>-->
+<!--    </div>-->
+<!--    <div class="form-group col-md-7">-->
+<!--      <label>{{topic}}</label>-->
+<!--    </div>-->
+<!--  </div>-->
 
-  <div class="form-row">
-    <div class="form-group col-md-5">
-      <label>Giáo viên hướng dẫn:</label>
-    </div>
-    <div class="form-group col-md-7">
-      <label>{{teacher}}</label>
-    </div>
-  </div>
+<!--  <div class="form-row">-->
+<!--    <div class="form-group col-md-5">-->
+<!--      <label>Giáo viên hướng dẫn:</label>-->
+<!--    </div>-->
+<!--    <div class="form-group col-md-7">-->
+<!--      <label>{{teacher}}</label>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="form-row">
     <div class="form-group col-md-5">
