bao_cao_tien_do

--- a/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -38,7 +38,7 @@
             <div class="dropdown-menu">
               <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Nộp luận
                 văn</a>
-              <a routerLink="/student/send-thesis-detail" class="dropdown-item"><i class="fa fa-file"
+              <a routerLink="/student/progress" class="dropdown-item"><i class="fa fa-file"
                                                                                    aria-hidden="true"></i>Báo cáo tiến độ</a>
               <a href="#" class="dropdown-item"><i class="fa fa-key" aria-hidden="true"></i>Đổi mật
                 khẩu</a>
